# osdu-agent

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml  security.yml
docs/: windows-compatibility.md
src/agent/: __init__.py  activity.py  agent.py  cli.py  config.py  middleware.py  observability.py
src/agent/copilot/: __init__.py  config.py  constants.py
src/agent/copilot/base/: __init__.py  runner.py  tracker.py
src/agent/copilot/models/: __init__.py
src/agent/copilot/prompts/: cve_analysis.md  dependency_analysis.md  dependency_check.md  depends.md  scan.md  system.md  system_orig.md  vulns.md
src/agent/copilot/runners/: __init__.py  copilot_runner.py  depends_runner.py  direct_test_runner.py  status_runner.py  vulns_runner.py
src/agent/copilot/trackers/: __init__.py  depends_tracker.py  service_tracker.py  status_tracker.py  test_tracker.py  vulns_tracker.py
src/agent/copilot/utils/: __init__.py  display.py
src/agent/display/: __init__.py  events.py  execution_context.py  execution_tree.py  interrupt_handler.py  result_formatter.py
src/agent/filesystem/: __init__.py  tools.py
src/agent/git/: __init__.py  tools.py
src/agent/github/: __init__.py  base.py  code_scanning.py  direct_client.py  fork_client.py  issues.py  pull_requests.py  variables.py  workflows.py
src/agent/gitlab/: __init__.py  analytics.py  base.py  direct_client.py  issues.py  merge_requests.py  models.py  pipelines.py  report_formatter.py
src/agent/hosted_tools/: __init__.py  compatibility.py  manager.py
src/agent/mcp/: __init__.py  maven_mcp.py  osdu_mcp.py  tool_arg_normalizer.py
src/agent/utils/: __init__.py  terminal.py
src/agent/workflows/: __init__.py  depends_workflow.py  report_workflow.py  result_store.py  send_workflow.py  status_workflow.py  vulns_workflow.py
tests/: __init__.py  conftest.py  test_activity.py  test_agent.py  test_clear_command.py  test_config.py  test_copilot.py  test_depends_tracker.py  test_direct_test_runner.py  test_display_events.py  test_execution_context.py  test_execution_tree.py  test_filesystem.py  test_git_tools.py  test_github_tools.py  test_github_variables.py  test_gitlab_integration.py  test_gitlab_label_mapping.py  test_gitlab_models.py  test_gitlab_tools.py  test_hosted_tools.py  test_maven_mcp.py  test_mcp_array_params.py  test_middleware.py  test_observability.py  test_osdu_mcp.py  test_report_integration.py  test_report_workflow.py  test_result_formatter.py  test_send_workflow.py  test_smart_detection.py  test_status_actions_flag.py  test_status_glab_integration.py  test_terminal.py  test_vulns.py  test_workflows.py
