[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osdu-agent"
version = "0.1.15"
description = "AI-powered GitHub & GitLab management agent for OSDU services"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Daniel Scholl", email = "danielscholl@users.noreply.github.com"}
]
keywords = ["agent", "github", "gitlab", "issues", "ai", "osdu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agent-framework>=1.0.0b251007",
    "PyGithub>=2.8.1",
    "azure-identity>=1.25.1",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "python-gitlab>=6.5.0",
    "prompt_toolkit>=3.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "mypy>=1.18.2",
    "black>=25.9.0",
    "ruff>=0.13.3",
]

[project.scripts]
osdu = "agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent.copilot.prompts" = ["*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=agent",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "src/agent/cli.py",
    "src/agent/copilot/*",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

# Exclude external, test, copilot, workflows, display, and mcp directories from type checking
# Also exclude complex legacy files and GitHub API client files with PyGithub type issues
exclude = [
    "^repos/",
    "^tests/",
    "^src/agent/copilot/",
    "^src/agent/workflows/",
    "^src/agent/display/",
    "^src/agent/mcp/",
    "^src/agent/git/tools.py$",
    "^src/agent/github/direct_client.py$",
    "^src/agent/github/variables.py$",
    "^src/agent/github/workflows.py$",
    "^src/agent/filesystem/__init__.py$",
]
